k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp
  template:
    metadata:
      labels:
        app: chatapp
    spec:
      containers:
        - name: chatapp
          image: fredmaina/chatapp:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
